--- a/Laba2-1/Laba2-1.vcxproj.filters
+++ b/Laba2-1/Laba2-1.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="Matrix.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Exteption.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
+      <Filter>Файлы ресурсов</Filter>
+    </ClInclude>
+    <ClInclude Include="Exteption.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
   </ItemGroup>
